src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Campo_para_sumar_en_oportunidad__c</fullName>
        <label>Campo para sumar en oportunidad</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cargo_Mensual__c</fullName>
        <label>Cargo Mensual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cargo_por_nica_vez_total_sumable__c</fullName>
        <label>Cargo por única vez total sumable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cargo_por_unica_vez_total__c</fullName>
        <formula>Quantity *  Cargo_unica_vez__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cargo por única vez total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cargo_totales_por_mes_Total_sumable__c</fullName>
        <label>Cargo totales por mes Total sumable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cargo_unica_vez__c</fullName>
        <label>Cargo unica vez</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cargos_Totales_por_Mes__c</fullName>
        <formula>Quantity * UnitPrice</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cargos Totales por Mes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comentarios__c</fullName>
        <label>Comentarios</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FCV__c</fullName>
        <formula>UnitPrice  * Quantity * Plazo__c +  Cargo_por_unica_vez_total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Precio Total Contrato</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Moneda__c</fullName>
        <label>Moneda</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ARG</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Monto_Total_Contrato__c</fullName>
        <label>Monto Total Contrato</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Plazo__c</fullName>
        <label>Plazo (meses)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Mes_por_Plazo__c</fullName>
        <formula>Cargos_Totales_por_Mes__c * Plazo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Mes por Plazo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <validationRules>
        <fullName>Productos_tiene_que_ser_un_valor_entero</fullName>
        <active>true</active>
        <errorConditionFormula>IF( (Quantity - FLOOR(Quantity))&gt; 0 , true, false)</errorConditionFormula>
        <errorDisplayField>Quantity</errorDisplayField>
        <errorMessage>La cantidad de los productos debe ser un valor entero</errorMessage>
    </validationRules>
</CustomObject>